--- a/api/api/Properties/launchSettings.json
+++ b/api/api/Properties/launchSettings.json
@@ -17,10 +17,10 @@
         "ASPNETCORE_ENVIRONMENT": "Local"
       }
     },
-    "booking_api": {
+    "api": {
       "commandName": "Project",
       "launchBrowser": false,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "knarrholmen-booking",
       "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Local"
