Deployed db to azure

--- a/api/api/appsettings.json
+++ b/api/api/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "KnarrholmenBooking": "Server=tcp:knarrholmenbooking.database.windows.net,1433;Initial Catalog=KnarrholmenBooking;Persist Security Info=False;User ID=alexander;Password=zaig6kagh*doom4GRES;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
+  "CorsOrigin": "http://localhost:3000",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
