--- a/api/api/Properties/launchSettings.json
+++ b/api/api/Properties/launchSettings.json
@@ -23,7 +23,7 @@
       "launchUrl": "knarrholmen-booking",
       "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Local"
+        "ASPNETCORE_ENVIRONMENT": "Production"
       }
     }
   }
