Changed activities page and connected to api

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "antd": "^4.8.5",
     "axios": "^0.21.0",
     "formik": "^2.2.5",
+    "lodash.debounce": "^4.0.8",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -49,6 +50,7 @@
     "@types/react-dom": "^16.9.10",
     "@types/react-router-dom": "^5.1.6",
     "@types/yup": "^0.29.9",
+    "@types/lodash.debounce": "^4.0.6",
     "@typescript-eslint/eslint-plugin": "^4.8.2",
     "@typescript-eslint/parser": "^4.8.2",
     "eslint": "^7.14.0",
