--- a/api/api/appsettings.json
+++ b/api/api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "KnarrholmenBooking": "Server=tcp:knarrholmenbooking.database.windows.net,1433;Initial Catalog=KnarrholmenBooking;Persist Security Info=False;User ID=alexander;Password=cart!wurd0ZIPT8kee;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "KnarrholmenBooking": "Server=tcp:knarrholmenbooking.database.windows.net,1433;Initial Catalog=KnarrholmenBooking;Persist Security Info=False;User ID=;Password=;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "CorsOrigin": "http://localhost:3000",
   "Logging": {
