--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "antd": "^4.8.5",
     "axios": "^0.21.0",
     "formik": "^2.2.5",
+    "gantt-schedule-timeline-calendar": "^3.6.6",
     "lodash.debounce": "^4.0.8",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
